--- a/quote.html
+++ b/quote.html
@@ -1,26 +1,36 @@
-<div id="randomQuote">
- Your Random Quote here
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<div class="container-fluid">
+  <div class="quoteContainer">
+    <blockquote class="blockquote-reverse">
+  <div id="randomQuote">
+    
+    <h3> Click to generate a random programming quote </h3> 
+  </div>
+    </blockquote>
+    
+        <div class="tweet">
+      <a rel="nofollow" rel="noreferrer"id="tweetbutton" class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Quote%20Of%20The%20Day" data-size="large"> Tweet </a>
+    </div>
+
+    <button id="quoteGenerator" class="btn" type="submit"> New Quote </button>
+  </div>
 </div>
+<script>
+  window.twttr = (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+    if (d.getElementById(id)) return t;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "https://platform.twitter.com/widgets.js";
+    fjs.parentNode.insertBefore(js, fjs);
 
-<a rel="nofollow" rel="noreferrer"id="tweetbutton" class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?text=Quote%20Of%20The%20Day" data-size="large"> Share
-</a>
+    t._e = [];
+    t.ready = function(f) {
+      t._e.push(f);
+    };
 
-<button id="quoteGenerator"> New Quote </button>
-
-<script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
-
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
-
-  return t;
-}(document, "script", "twitter-wjs"));</script>
+    return t;
+  }(document, "script", "twitter-wjs"));
+</script>
